AppliRabbit1/consumerdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumerdeployment
  labels:
    app: consumerapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumerapp
  template:
      metadata:
        labels:
          app: consumerapp
      spec:
        containers:
          - name: consumerapp
            image: pauldacruz/rabbitconsumer:latest
            resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
            ports: 
              - containerPort: 80
            volumeMounts:
              - name: appsettings-conso-volume
                mountPath: /app/appsettings.k8s.json
                subPath: appsettings.k8s.json
        volumes:
          - name: appsettings-conso-volume
            configMap:
              name: appsettings-rabbitconsumer
