AppliRabbit1/producerdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producerdeployment
  labels:
    app: producerapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producerapp
  template:
      metadata:
        labels:
          app: producerapp
      spec:
        containers:
          - name: producerapp
            image: pauldacruz/rabbitproducer:latest
            resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
            ports: 
              - containerPort: 80
            volumeMounts:
              - name: appsettings-prod-volume
                mountPath: /app/appsettings.k8s.json
                subPath: appsettings.k8s.json
        volumes:
          - name: appsettings-prod-volume
            configMap:
              name: appsettings-rabbitproducer
