AppliRabbit1/rabbitdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitdeployment
  labels:
    app: rabbitapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitapp
  template:
      metadata:
        labels:
          app: rabbitapp
      spec:
        containers:
          - name: rabbitapp
            image: rabbitmq:3-management
            resources:
              requests:
                memory: "128Mi"
                cpu: "250m"
              limits:
                memory: "256Mi"
                cpu: "500m"
            ports: 
              - containerPort: 5672
              - containerPort: 15672
