AppliRabbit1/producerservice.yaml

kind: Service
apiVersion: v1
metadata:
  name: producerservice
spec:
  selector:
    app: producerapp
  ports:
    - port: 80 # Default port for image
