AppliRabbit1/rabbitservice.yaml

kind: Service
apiVersion: v1
metadata:
  name: rabbitservice
spec:
  selector:
    app: rabbitapp
  ports:
    - name: amqp      
      port: 5672
    - name: http
      port: 15672
