AppliRabbit1/produceringress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-producer
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /producer(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: producerservice
              port: 
                number: 80
